# TareaProyectoDeSistemasArquitecturas

broker/broker/: package.json
master-slave/: Cargo.toml  main.py  master_node.py  pyproject.toml  slave_node.py
master-slave/src/: lib.rs
master-slave/templates/: index.html
master-slave/templates/partials/: task_list.html
peer-to-peer/: docker-compose.yml  dockerfile  main.py  pyproject.toml
peer-to-peer/templates/: index.html
